Added error responses
